zao xing neng biao gan jiang gao duan qi jian ti yan xiang geng duo jia wei duan pu ji zai yu OPPO de guan

--- a/date/2024-10/page-2.htm
+++ b/date/2024-10/page-2.htm
@@ -300,8 +300,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-23620.htm">kotlin 标准函数和静态方法 with、run、apply</a></h4>
-                <p>一.标准函数 1.with函数 with函数接受两个参数，第一个是任意类型的对象，第二个是lambda表达式。 作用：连续调用同一对象的多个方法。返回值是最后一个值 格式如下： val result </p>
+                <h4><a href="/news/article-44730.htm">违背宠物领养协议怎么处理的（宠物领养条约）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈违背宠物领养协议怎么处理的，以及宠物领养条约对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物领养协议是否有法律效力...       </p>
             </div>
         </div>
     </div>
@@ -310,8 +310,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-11-shadowrocket-node.htm">12月11日更新19M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、新加坡、日本、韩国、香港、美国、加拿大等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-20412.htm">动物疫苗厂家排名（动物疫苗企业名单）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗厂家排名的知识，其中也会对动物疫苗企业名单进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猪用高品质疫苗那个公司最好.</p>
             </div>
         </div>
     </div>
@@ -320,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25011.htm">Logback及其MDC功能详解</a></h4>
-                <p>Logback日志系统是SLF4J的原生实现。同时，Logback也是Log4j的继任者，补全了Log4j的不足。 1.&nbsp;Logback的模块组成  logback-core，其他模块的功能</p>
+                <h4><a href="/news/article-21328.htm">天津宠物用品超市（天津宠物用品超市有哪些）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈天津宠物用品超市，以及天津宠物用品超市有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、天津天诺宠物用品销售有限公司怎么样?...  </p>
             </div>
         </div>
     </div>
@@ -330,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19953.htm">动物疫苗经营范围有哪些内容要求（动物疫苗经营许可）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗经营范围有哪些内容要求的知识，其中也会对动物疫苗经营许可进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、生物科技有限.</p>
+                <h4><a href="/free-nodes/2025-1-21-free-v2ray.htm">1月21日更新20.1M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、欧洲、香港、美国、加拿大、韩国等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -340,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-28-free-v2ray-subscribe.htm">10月28日更新18.6M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、香港、日本、美国、韩国、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-1-19-clash-node-daily-updates.htm">1月19日更新20.8M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、香港、欧洲、日本、美国、新加坡、加拿大等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -350,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-44233.htm">浅谈Redis缓存和数据库一致性问题</a></h4>
-                <p>最近面试季节，估计「如何保证缓存和数据库一致性」这个问题经常会被问到，这是一个老生常谈的话题了。 但很多人对这个问题，依旧有很多疑惑：  到底是更新缓存还是删缓存？ 到底选择先更新数据库，再删除缓存，</p>
+                <h4><a href="/free-nodes/2024-11-7-free-clash-subscribe.htm">11月7日更新19.1M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、新加坡、加拿大、欧洲、韩国、香港等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -360,8 +360,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-32997.htm">狗粮制造机多少钱（狗粮加工机多少钱）</a></h4>
-                <p>摘要：       今天给各位分享狗粮制造机多少钱的知识，其中也会对狗粮加工机多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、投资一个狗粮加工厂大约需多.</p>
+                <h4><a href="/free-nodes/2024-12-9-clash-node.htm">12月9日更新18M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、韩国、欧洲、日本、美国等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-11-21-clash-v2ray-ss-ssr.htm">11月21日更新21M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、日本、美国、韩国、欧洲、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -380,18 +390,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-32520.htm">佳雯宠物医院环城西路店（佳雯宠物医院环城东路分院怎么样）</a></h4>
-                <p>摘要：       今天给各位分享佳雯宠物医院环城西路店的知识，其中也会对佳雯宠物医院环城东路分院怎么样进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、佳雯宠.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-2-clash-node.htm">12月2日更新22.6M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、美国、香港、加拿大、日本、新加坡等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-40264.htm">猫咪多久打一次驱虫（猫咪多久打一次驱虫比较好）</a></h4>
+                <p>摘要：       今天给各位分享猫咪多久打一次驱虫的知识，其中也会对猫咪多久打一次驱虫比较好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、小猫驱虫多久一次.</p>
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
