--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -146,8 +146,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm">12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、加拿大、香港、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25940.htm">git下载、安装、配置与简单应用</a></h4>
+                <p>目录 1 git下载、安装与配置 1.1下载与安装 1.1.1登录git官网：Git (git-scm.com)点击击图中红线圈出的Downloads,进入下载页面。 1.1.2根据自己系统，下载相应</p>
             </div>
         </div>
     </div>
@@ -156,8 +156,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-30-free-high-speed-nodes.htm">12月30日更新21.1M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、加拿大、韩国、日本、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-37798.htm">同城免费领养宠物怎么领取 同城免费领养宠物怎么领取的</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于同城免费领养宠物怎么领取的问题，于是小编就整理了4个相关介绍同城免费领养宠物怎么领取的解答，让我们一起看看吧。58上怎么发布免费</p>
             </div>
         </div>
     </div>
@@ -176,8 +176,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-7-free-clash.htm">10月7日更新21.1M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、新加坡、香港、韩国、加拿大、欧洲、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-33950.htm">Azure DevOps通过Azure Devops部署一个.NET Core WebAPI</a></h4>
+                <p>前几篇文章中，我们讨论了如何通过流水线实现项目的编译、上传、打包、部署等操作，今天我们来实现一套完整的流程，把之前碎片化的知识点给串起来。 本次我们使用一个ASP.NET Core的WebApi项目来</p>
             </div>
         </div>
     </div>
@@ -186,8 +186,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-28-clash-windows.htm">11月28日更新19M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、日本、新加坡、美国、加拿大、韩国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-25-node-share.htm">11月25日更新19.6M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、加拿大、香港、日本、新加坡、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -196,8 +196,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-2-clash-node.htm">12月2日更新22.6M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、美国、香港、加拿大、日本、新加坡等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-39771.htm">正规免费领养宠物的网站有哪些（免费领养宠物的app有哪些）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈正规免费领养宠物的网站有哪些，以及免费领养宠物的app有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有哪些比较可靠的领养喵咪的..</p>
             </div>
         </div>
     </div>
@@ -206,8 +206,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-16-clash-node-daily-updates.htm">12月16日更新21.2M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、新加坡、美国、日本、加拿大、香港、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-19-clash-node.htm">12月19日更新20.6M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、加拿大、日本、美国、欧洲、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -216,8 +216,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-41263.htm">如何从AngularJS模板的HTML中调用encodeURIComponent？</a></h4>
-                <p>要创建一个调用encodeURIComponent的过滤器，以下是HTML- &lt;div&nbsp;ng-app&nbsp;=&nbsp;"app"&gt; &nbsp;&nbsp;&nbsp;&</p>
+                <h4><a href="/free-nodes/2024-10-15-free-ssr-node.htm">10月15日更新20.2M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、加拿大、欧洲、韩国、日本、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -226,8 +226,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-20412.htm">动物疫苗厂家排名（动物疫苗企业名单）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗厂家排名的知识，其中也会对动物疫苗企业名单进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猪用高品质疫苗那个公司最好.</p>
+                <h4><a href="/free-nodes/2024-11-27-free-clash-subscribe.htm">11月27日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、香港、美国、欧洲、韩国、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -236,8 +236,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-35377.htm">义乌领养宠物的地方 义乌领养宠物的地方在哪里</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于义乌领养宠物的地方的问题，于是小编就整理了1个相关介绍义乌领养宠物的地方的解答，让我们一起看看吧。陈江河 为什么 收养 邱岩？陈</p>
+                <h4><a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm">12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、加拿大、香港、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -248,7 +248,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
