--- a/free-nodes/page-11.htm
+++ b/free-nodes/page-11.htm
@@ -118,6 +118,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-10-16">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-10-16-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/5609cbe4a2710c44400fb8b4e8928ba9.webp" alt="10月16日更新21M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-10-16-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">10月16日更新21M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了香港、日本、欧洲、新加坡、加拿大、美国、韩国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                10月16日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-10-15">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -280,8 +297,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-27-free-ssr-subscribe.htm">10月27日更新19.6M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、欧洲、香港、美国、新加坡、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-17-clash-node-daily-updates.htm">12月17日更新18.9M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、日本、韩国、美国、加拿大等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -290,8 +307,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-12-clash-windows.htm">10月12日更新22.4M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、韩国、新加坡、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25941.htm">家用小型狗粮机器价格表（小型家用狗粮制作机）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈家用小型狗粮机器价格表，以及小型家用狗粮制作机对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里有卖做猫粮狗粮的机器多少钱一台...  </p>
             </div>
         </div>
     </div>
@@ -300,8 +317,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-29190.htm">es修改字段text类型为date类型</a></h4>
-                <p>一、概述 首先说明es中索引的字段类型是不可修改的，只能是重新创建一个索引并设置好映射mapping，然后再将老索引的数据复制过去。 二、原索引字段text类型  三、操作步骤   创建索引，并指定映</p>
+                <h4><a href="/free-nodes/2024-11-5-free-shadowrocket-node.htm">11月5日更新20.6M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、韩国、日本、香港、新加坡、欧洲、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -310,8 +327,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-5-clash-windows.htm">1月5日更新20.2M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、欧洲、新加坡、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-37797.htm">饲料搅拌粉碎机安装图（饲料粉碎搅拌机百科）</a></h4>
+                <p>摘要：       今天给各位分享饲料搅拌粉碎机安装图的知识，其中也会对饲料粉碎搅拌机百科进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、选配与安装小型饲料加.</p>
             </div>
         </div>
     </div>
@@ -320,8 +337,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19495.htm">小动物疫苗注射证明是疫苗本吗 动物疫苗注射证明怎么开</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于小动物疫苗注射证明是疫苗本吗的问题，于是小编就整理了2个相关介绍小动物疫苗注射证明是疫苗本吗的解答，让我们一起看看吧。宠物疫苗本</p>
+                <h4><a href="/news/article-30616.htm">猫咪3针疫苗多久能打完啊图片（猫咪三针疫苗打多久）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈猫咪3针疫苗多久能打完啊图片，以及猫咪三针疫苗打多久对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、新手养猫最全猫咪养护指南...    </p>
             </div>
         </div>
     </div>
@@ -330,8 +347,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-28263.htm">重庆宠物领养吧狗（重庆宠物狗领养中心）</a></h4>
-                <p>摘要：       今天给各位分享重庆宠物领养吧狗的知识，其中也会对重庆宠物狗领养中心进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、哪里可以领养狗狗?... </p>
+                <h4><a href="/news/article-38781.htm">动物疫苗间隔多久打一次（动物疫苗打几次）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗间隔多久打一次的知识，其中也会对动物疫苗打几次进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗要隔多久打一次疫苗.</p>
             </div>
         </div>
     </div>
@@ -340,8 +357,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-24548.htm">上海宠物领养平台电话多少 上海宠物领养平台电话多少号</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于上海宠物领养平台电话多少的问题，于是小编就整理了2个相关介绍上海宠物领养平台电话多少的解答，让我们一起看看吧。上海12378投诉</p>
+                <h4><a href="/free-nodes/2024-12-13-clash-node-daily-updates.htm">12月13日更新22M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、欧洲、加拿大、日本、新加坡、美国、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -350,8 +367,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-18878.htm">和田哪里有宠物店（和田卖宠物的地方）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈和田哪里有宠物店，以及和田卖宠物的地方对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、和田哪里有卖仓鼠的么2、...        本篇文</p>
+                <h4><a href="/news/article-36819.htm">vue3 vue-router的使用</a></h4>
+                <p>前端路由是如何做到URL和内容进行映射呢？监听URL的改变 目录 前端路由原理 vue-router的使用 &nbsp;默认路由，重定向 hash与history模式 router-link 路由懒加</p>
             </div>
         </div>
     </div>
@@ -360,8 +377,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-31-free-shadowrocket-node.htm">10月31日更新21.9M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、日本、韩国、美国、新加坡等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-19039.htm">中国动物疫苗生产企业排名榜 中国动物疫苗生产企业排名榜最新</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于中国动物疫苗生产企业排名榜的问题，于是小编就整理了2个相关介绍中国动物疫苗生产企业排名榜的解答，让我们一起看看吧。辉瑞和科兴是哪</p>
             </div>
         </div>
     </div>
@@ -370,8 +387,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-22701.htm">猫三联打几针多少钱一次（猫三联要多少钱第一针）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫三联打几针多少钱一次，以及猫三联要多少钱第一针对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫要打几次疫苗啥价格,猫三联是多少钱?..</p>
+                <h4><a href="/free-nodes/2024-10-15-free-ssr-node.htm">10月15日更新20.2M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、加拿大、欧洲、韩国、日本、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -382,7 +399,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
